--- a/35. Search Insert Position.md
+++ b/35. Search Insert Position.md
@@ -1,31 +1,50 @@
 Given a sorted array and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.
 
 You may assume no duplicates in the array.
-```
+
 Example 1:
+```
 Input: [1,3,5,6], 5
 Output: 2
-
+```
 Example 2:
+```
 Input: [1,3,5,6], 2
 Output: 1
-
+```
 Example 3:
+```
 Input: [1,3,5,6], 7
 Output: 4
-
+```
 Example 4:
+```
 Input: [1,3,5,6], 0
 Output: 0
 ```
+
 ```java
 class Solution {
     public int searchInsert(int[] nums, int target) {
-        int i;
-        for(i=0;i<nums.length;i++){
-            if(nums[i]>=target) return i;
+        int left=0;
+        int right=nums.length-1;
+        if(target<nums[0]) return 0;
+        if(target>nums[nums.length-1]) return nums.length;
+        while(left<right){
+            int mid=(left+right)/2;
+            if(nums[mid]==target){
+                return mid;
+            }
+            if(target<nums[mid]){
+                right=mid;
+            }
+            else{
+                left=mid+1;
+            }
         }
-        return i;
+        return left;
     }
 }
+//1 3 5 6
+//  l r
 ```
