Update 127. Word Ladder.md

--- a/127. Word Ladder.md
+++ b/127. Word Ladder.md
@@ -31,6 +31,11 @@ Output: 0
 Explanation: The endWord "cog" is not in wordList, therefore no possible transformation.
 ```
 ```java
+/*
+Consider this problem as BFS problem we will start with beginword as starting node we will keep exploring its neighhbors
+its neighbors are thos which differ by the current node by one character. And once we visited particular word we won't visit that again so we will have neigbhors of current node and now we will search for neighbors for every node in queue and store them in queue and so on until we find lst element.
+*/
+
 class Solution {
     public int ladderLength(String beginWord, String endWord, List<String> wordList) {
         if (beginWord == null || endWord == null || wordList == null || beginWord.length() != endWord.length()) {
@@ -41,16 +46,16 @@ class Solution {
             return 0;
         if(beginWord.equals(endWord)) return 0;
          
-        Deque<String> dq=new ArrayDeque<>();
-        Set<String> visited=new HashSet<>();
+        Deque<String> dq=new ArrayDeque<>(); //to store the nodes at current level
+        Set<String> visited=new HashSet<>(); //to store visited node
         dq.add(beginWord);
         visited.add(beginWord);
         int distance=1;
-        while(!dq.isEmpty()){
-            int wordsInLevel=dq.size();
-            for(int i=0;i<wordsInLevel;i++){
-                String word=dq.removeFirst();
-                if(word.equals(endWord)){
+        while(!dq.isEmpty()){              
+            int wordsInLevel=dq.size(); //we will find the neighbors of every node at each level
+            for(int i=0;i<wordsInLevel;i++){  
+                String word=dq.removeFirst();  
+                if(word.equals(endWord)){  
                     return distance;
                 }
                 for(String neighbor:getNeighbors(word,words)){
@@ -64,6 +69,7 @@ class Solution {
         }
         return 0;
     }
+    //this function basically tells the neighbors of current node. it changes only one character and check if that charater is in list or not and if it is then that is its neighbor.
     public static Set<String> getNeighbors(String word,Set<String>words){
         Set<String> validWords=new HashSet<>();
         for(int i=0;i<word.length();i++){
