Update 1510. Stone Game IV.md

--- a/1510. Stone Game IV.md
+++ b/1510. Stone Game IV.md
@@ -56,7 +56,7 @@ class Solution {
     public boolean winnerSquareGame(int n) {
         boolean[] dp=new boolean[n+1];
         for(int i=1;i<=n;i++){
-            for(int k=i;k*k<=n;k++){
+            for(int k=1;k*k<=i;k++){
                 //!dp[i-k*k] because if we are on ith number and subtract k*k as we can only subtract perfect square so if that is false that means whoever lands on i-k*k will lose so I can make ith number true. And if dp[i-k*k] is true that means i can't subtract k*k as it will result in other person win . So i will move to next perfect square
                 if(!dp[i-k*k]){
                     dp[i]=true;
