--- a/105. Construct Binary Tree from Preorder and Inorder Traversal.md
+++ b/105. Construct Binary Tree from Preorder and Inorder Traversal.md
@@ -23,26 +23,42 @@ Return the following binary tree:
  *     int val;
  *     TreeNode left;
  *     TreeNode right;
- *     TreeNode(int x) { val = x; }
+ *     TreeNode() {}
+ *     TreeNode(int val) { this.val = val; }
+ *     TreeNode(int val, TreeNode left, TreeNode right) {
+ *         this.val = val;
+ *         this.left = left;
+ *         this.right = right;
+ *     }
  * }
  */
 class Solution {
     public TreeNode buildTree(int[] preorder, int[] inorder) {
-        return helper(0,0,inorder.length-1,preorder,inorder);
+        return helper(preorder,inorder,0,inorder.length-1,0,preorder.length-1);   
     }
-    private TreeNode helper(int preStart,int inStart,int inEnd,int[] preorder,int[] inorder){
-        if(preStart>preorder.length-1 || inStart>inEnd){
-            return null;
+    public TreeNode helper(int[] preorder,int[] inorder, int inS,int inE,int pS,int pE){
+        if(inE<inS) return null;
+        int rootVal=preorder[pS];
+        int rootIdx=-1;
+        for(int i=0;i<inorder.length;i++){
+            if(inorder[i]==rootVal){
+                rootIdx=i;
+                break;
+            }
         }
-        TreeNode root=new TreeNode(preorder[preStart]);
-        int index=0;
-        for(int i=inStart;i<=inEnd;i++){
-            if(root.val==inorder[i])
-                index=i;
-        }
-        root.left=helper(preStart+1,inStart,index-1,preorder,inorder);
-        root.right=helper(preStart+index-inStart+1,index+1,inEnd,preorder,inorder);
+        int ire = inE;
+        int pls = pS+1;
+        int ils = inS;
+        int pre = pE;
+        int irs = rootIdx+1;
+        int ile = rootIdx-1;
+        int ple = ile-ils+pls;
+        int prs = ple+1;
+        TreeNode root=new TreeNode(rootVal);
+        root.left=helper(preorder,inorder,ils,ile,pls,ple);
+        root.right=helper(preorder,inorder,irs,ire,prs,pre);
         return root;
     }
+}  }
 }
 ```
