Update and rename Construct Binary Tree from Inorder and Postorder Traversal.md to 106.Construct Binary Tree from Inorder and Postorder Traversal.md

--- a/106.Construct Binary Tree from Inorder and Postorder Traversal.md
+++ b/106.Construct Binary Tree from Inorder and Postorder Traversal.md
@@ -16,7 +16,6 @@ Return the following binary tree:
    15   7
 ``` 
 ```java
-
 /**
  * Definition for a binary tree node.
  * public class TreeNode {
@@ -34,18 +33,17 @@ Return the following binary tree:
  */
 class Solution {
     public TreeNode buildTree(int[] inorder, int[] postorder) {
-        return helper(inorder,postorder,0,inorder.length-1,0,postorder.length-1);  
+        Map<Integer,Integer> map=new HashMap<>();
+        for(int i=0;i<inorder.length;i++){
+            map.put(inorder[i],i);
+        }
+        return helper(inorder,postorder,0,inorder.length-1,0,postorder.length-1,map);  
     }  
-    public TreeNode helper(int[] inorder,int[] postorder,int inS,int inE,int pS,int pE){
+    public TreeNode helper(int[] inorder,int[] postorder,int inS,int inE,int pS,int pE,Map<Integer,Integer> map){
         if(inS>inE) return null;
         int rootIdx=-1;
         int rootVal=postorder[pE];
-        for(int i=0;i<inorder.length;i++){
-            if(inorder[i]==rootVal){
-                rootIdx=i;
-                break;
-            }
-        }
+        rootIdx=map.get(rootVal);
         int ils = inS;
         int ire = inE;
         int pls = pS;
@@ -55,11 +53,13 @@ class Solution {
         int ple = ile-ils+pls;
         int prs = ple+1;
         TreeNode root=new TreeNode(rootVal);
-        root.left=helper(inorder,postorder,ils,ile,pls,ple);
-        root.right=helper(inorder,postorder,irs,ire,prs,pre);
+        root.left=helper(inorder,postorder,ils,ile,pls,ple,map);
+        root.right=helper(inorder,postorder,irs,ire,prs,pre,map);
         return root;
     }
 }
+
+
 
 
 ```
